--- a/rxstrategy-rxjava2/build.gradle
+++ b/rxstrategy-rxjava2/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21-2'
 }
 
 group 'me.alexeyterekhov'
@@ -12,5 +13,19 @@ repositories {
 }
 
 dependencies {
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
